# RenderEngine

./: CMakeLists.txt  README.MD  run.py  xFile.py
RenderApp/: CMakeLists.txt  main.cpp
RenderApp/FakeData/: FakeDataBase.h  FakeDataGenerator.cpp  FakeDataProvider.cpp  FakeDataProvider.h  FakePolyLineData.cpp  FakePolyLineData.h  FakeTextureData.cpp  FakeTextureData.h  FakeTriangle.cpp  FakeTriangle.h  FakeTriangleData.cpp  FakeTriangleData.h  FakeTriangleHelper.h  FakeTriangleMesh.cpp  FakeTriangleMesh.h  FakeTriangleMeshHelper.h  InstanceLineFakeData.cpp  InstanceLineFakeData.h  InstanceTriangleFakeData.cpp  InstanceTriangleFakeData.h  NAMESPACE_CHANGES.md  QUICK_START.md  TRIANGLE_RENDER_README.md  TriangleRenderExample.cpp
RenderApp/Widget/: MarchView.cpp  MarchView.h  RenderWidget.cpp  RenderWidget.h  ViewWrapper.cpp  ViewWrapper.h
RenderEngine/: CMakeLists.txt
RenderEngine/include/: GLRenderExport.h
RenderEngine/include/Common/: Brush.h  Camera.h  Color.h  DllSet.h  GLConfig.h  MarchCamera.h  OrthographicCamera.h  TextureLoader.h  Tools.h
RenderEngine/include/DataManager/: PolylinesVboManager.h  TriangleVboManager.h
RenderEngine/include/FakeData/: DataGenerator.h  FakeDataBase.h  FakeDataGenerator.h  FakeDataProvider.h  FakePolyLineData.h  FakeTextureData.h  FakeTriangleData.h  InstanceLineFakeData.h  InstanceTriangleFakeData.h
RenderEngine/include/Render/: CheckerboardRenderer.h  ColorLineBRenderer.h  ColorLineRenderer.h  ColorTriangleRenderer.h  IRenderer.h  ImageRenderer.h  InstanceLineRenderer.h  InstanceTextureRenderer.h  InstanceTriangleRenderer.h  LineBRenderer.h  LineRenderer.h  LineRendererUbo.h  LineTestRenderer.h  RenderCommon.h  RenderDataManager.h  RenderManager.h  TextureRenderer.h  TriangleRenderer.h
RenderEngine/include/Shader/: BaseTriangleShader.h  CheckerboardShader.h  FreeExShader.h  ImageShader.h  InstanceLineShader.h  InstanceTextureShader.h  InstanceTriangleShader.h  InstancedTextureShader.h  LineUboShader.h  PathBoldShader.h  PathShader.h  ShaderDef.h  TextureShader.h
RenderEngine/src/: main.cpp  readme.md
RenderEngine/src/Common/: Brush.cpp  Brush.h  Camera.cpp  Color.cpp  Color.h  MarchCamera.cpp  MarchCamera.h  OrthographicCamera.cpp  TextureLoader.cpp  TextureLoader.h  Tools.h
RenderEngine/src/DataManager/: PolylinesVboManager.cpp  TriangleVboManager.cpp
RenderEngine/src/FakeData/: DataGenerator.cpp  FakeDataGenerator.cpp  FakeDataProvider.cpp  FakePolyLineData.cpp  FakePolyLineData.h  FakeTextureData.cpp  FakeTextureData.h  FakeTriangleData.cpp  FakeTriangleData.h  InstanceLineFakeData.cpp  InstanceTriangleFakeData.cpp
RenderEngine/src/Render/: CheckerboardRenderer.cpp  CheckerboardRenderer.h  ColorFillRenderer.h  ColorLineBRenderer.cpp  ColorLineBRenderer.h  ColorLineRenderer.cpp  ColorLineRenderer.h  ColorTriangleRenderer.cpp  ColorTriangleRenderer.h  IRenderer.cpp  IRenderer.h  ImageRenderer.cpp  ImageRenderer.h  InstanceLineRenderer.cpp  InstanceTriangleRenderer.cpp  InstancedTextureRenderer.cpp  InstancedTextureRenderer.h  LineBRenderer.cpp  LineBRenderer.h  LineRenderer.cpp  LineRenderer.h  LineRendererUbo.cpp  LineRendererUbo.h  LineTestRenderer.cpp  RenderCommon.h  RenderDataManager.cpp  RenderManager.cpp  RenderManager.h  TextureRenderer.cpp  TextureRenderer.h  TriangleRenderer.cpp  TriangleRenderer.h
RenderEngine/src/Shader/: BaseLineShader.cpp  BaseLineShader.h  BaseTriangleShader.cpp  BaseTriangleShader.h  CheckerboardShader.cpp  CheckerboardShader.h  FreeExShader.cpp  FreeShader.cpp  FreeShader.h  ImageShader.cpp  InstanceLineShader.cpp  InstanceTextureShader.cpp  InstanceTriangleShader.cpp  LineFS.cpp  LineUboShader.cpp  LineVS.cpp  PathBoldShader.cpp  PathFillShader.cpp  PathFillShader.h  PathShader.cpp  PointShader.cpp  PointShader.h  TextureShader.cpp  UiTextureShader.cpp  UiTextureShader.h  freeExFS.glsl  freeExVS.glsl  freeFS.glsl  freeVS.glsl  pathExFS.glsl  pathExVS.glsl  pathFS.glsl  pathVS.glsl  qrc_Shader.cpp  testPathFS.glsl  testPathVS.glsl  testTextureFS.glsl  testTextureVS.glsl  textureFS.glsl  textureVS.glsl  (+2 more)
RenderEngine/src/Widget/: MarchView.h  RenderWidget.cpp  RenderWidget.h  ViewWrapper.cpp  ViewWrapper.h
